# lionSynth

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
layouts/: fm.yaml  layout.yaml  poli.yaml  poli2.yaml  poli3.yaml  poli4.yaml  poli4phased.yaml  pulse_passthrough.yaml  test.yaml  test2.yaml
src/: back_end.rs  generic_modules.rs  layout_yaml.rs  main.rs  module.rs
src/bundled_modules/: debug_modules.rs  mod.rs  oscillator.rs  oscillator_math.rs
src/bundled_modules/osc/: mod.rs  oscillator.rs  oscillator_math.rs
src/bundled_modules/sum/: mod.rs  sum_2in.rs  sum_3in.rs  var_sum.rs
src/module/: aux_input.rs  mod.rs  module.rs  parameter.rs  real_time.rs  real_time_wrappers.rs
