[package]
name = "lion_synth"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["verbose_modules"]
verbose_modules = []
module_values = []

[dependencies]
cpal = "0.15.0"
anyhow = "1.0.69"
log = "0.4.17"
simplelog = { version = "0.12.1", features = ["paris"] }
hound = "3.5.0"
yaml-rust = "0.4.4"

[dev-dependencies]
log = "0.4.17"
simplelog = "*"
